etc/kubernetes/manifests/dashboard/dashboard_ingress_http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: dashboard
  namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.ruby.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 443
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: dashboard
#  namespace: kubernetes-dashboard
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: dashboard.ruby.local
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: kubernetes-dashboard
#                port:
#                  number: 443
